--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 New in 4.3.
+Fixed a bug where pressing shift plus enter on some toys won't read out their descriptions for them.
 Made it so pressing shift plus D in all game modes will now tell you how many keys are collected out of the keys that need to be collected to unlock the winning door.
 New in 4.2.
 Added an info file to all of the key folders. You can now put your own descriptions to all of the keys found in your inventory.
