--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,9 +1,10 @@
 New in 4.3.
-Refactored the doors to make use of the keys you have in your inventory, along with how many keys you already have in total.
+Added an option in the game settings menu that controls weather all of the items should get announced as they're being collected. This also includes keys and toys, not just normal useable items.
+Refactored the door class to make use of the keys you currently have in your inventory, along with how many keys you already have in total.
 Fixed a bug where the pistol weapon would be randomly equipped in the endless game, even though that weapon was only reserved for the normal game.
-Recoded the weapon logic to use the new sound pack algorithm.
-Fixed a bug where pressing shift plus tab in your inventory won't wrap around back to the first or last item in the list.
-Fixed a bug where pressing shift plus enter on some toys won't read out their descriptions for them.
+Recoded the npc and weapon logics to use the new sound pack algorithm.
+Fixed a bug where pressing shift plus tab in your inventory wouldn't wrap around back to the first or last item in the list.
+Fixed a bug where pressing shift plus enter on some keys and toys won't read out their descriptions for them.
 New in 4.2.
 Made it so pressing shift plus D in all game modes will now tell you how many keys are collected out of the keys that need to be collected to unlock the winning door.
 Added an info file to all of the key folders. You can now put your own descriptions to all of the keys found in your inventory.
