Made it so items that have a description will now return the user back to the inventory menu after reading one, instead of making them exit the menu entirely.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,8 +1,9 @@
 New in 4.4.
+Made it so items that have a description will now return the user back to the inventory menu after reading one, instead of making them exit the menu entirely.
 Added an option in the game settings menu to enable or disable item giving sounds. This controls weather the sound for receiving an item in your inventory is played or not.
 Recoded the learn game sounds menu to use the new sound pack algorithm.
-Resolved an issue where the inventory menu would count up the totals of all of the items that were present, do to having multiples of the same item. From now on, it will only count up the items that are uniquely visible in the menu, not all of them at once.
-Changed the naming scheme for choosing a new normal or endless game difficulty. Instead of announcing the difficulty number, it will now announce the difficulty names of the game, such as easy, medium, hard etcetera.
+Resolved an issue where the inventory menu would count the total items that were present, do to having multiples of the same item. From now on, it will only count the items that are uniquely visible in the menu, not all of them at once.
+Changed the naming scheme for choosing a new normal or endless game difficulty. Instead of announcing the difficulty number, it will now announce the difficulty names of the game, such as easy, medium, hard, etcetera.
 Added the ability to choose a starting difficulty for the normal and endless game modes. This controls the overall strength of enemies and other object types in the game.
 Fixed a bug where sertain sounds weren't being played propperly in the endless game.
 New in 4.3.
