--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 New in 4.5.
+Made it so your starting HP is now higher based on the difficulty mode you're currently playing. This helps you deal with enemies and objects of the game a bit easier.
 Updated the readme file with total calculation summeries of sounds found in each section of the sound pack documentation.
 Updated the readme file with added documentation for creating sound packs in the game.
 Converted the rest of the sound categories to use the new sound pack algorithm in the learn game sounds menu.
