--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,5 +1,6 @@
 New in 4.5.
-Made it so your starting HP is now higher based on the difficulty mode you're currently playing. This helps you deal with enemies and objects of the game a bit easier.
+Reduced your starting health multiplier based on your current game mode. For example, instead of starting with 5000 HP in normal mode, and 50000 HP in endless mode when the difficulty is set to Chaos, you'll now start with 2000 and 20000 HP respectively.
+Made it so your starting health is now higher based on the difficulty mode you're currently playing. This helps you deal with enemies and objects of the game a bit easier.
 Updated the readme file with total calculation summeries of sounds found in each section of the sound pack documentation.
 Updated the readme file with added documentation for creating sound packs in the game.
 Converted the rest of the sound categories to use the new sound pack algorithm in the learn game sounds menu.
