--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 New in 4.5.
+Added an endless varient of the new toy store defender game mode.
 Added a new game mode where you play as the store owner and protect theifs from stealing the toys that are yours. The goal of this mode is to save as many toys as you can, while also killing those who try to take them.
 Renamed all of the game modes in the game menu. The endless mode is now refered to endless arcade, and the normal mode is now refered to time trial.
 Made it so your player and store HP gets displayed in actual values, along with it's original percentages in the pause menu.
