--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 New in 4.7.
+Added an option in the game settings menu to enable or disable playing the logo sound upon launching the game.
+Added some new sounds to the game. Thanks goes to Keri for the huge contribution. This includes a pritty logo, and a custom wood platform for the toy defender mode.
 Fixed some bugs with the session and lifetime achievements for thieves.
 Made it so the pistol weapon is only available in the endless arcade mode for the toy collector game.
 Made it so toys no longer break in the toy defender game.
