Removed the looping and variant description options found in the settings menu. These were tied to the old learn game sounds menu.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 New in 4.8.
+Removed the looping and variant description options found in the settings menu. These were tied to the old learn game sounds menu.
 Brought back the ability to configure your TTS options in the settings menu.
 Completely removed the learn game sounds menu, do to the new menu system not supporting it.
 Fixed some menu navigation issues.
